[gd_scene load_steps=5 format=3 uid="uid://rrc7p2qy4okn"]

[ext_resource type="Script" path="res://bullet.gd" id="1_7xto8"]
[ext_resource type="Texture2D" uid="uid://im0uppso5dl5" path="res://bread.png" id="2_82bbk"]
[ext_resource type="AudioStream" uid="uid://c12kqs1gyag5r" path="res://attack.mp3" id="3_yr18e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p4ja0"]
radius = 35.3553

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_7xto8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_82bbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p4ja0")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yr18e")
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
